rustdocs/errors/rust-bitcoin-bitcoin-src-blockdata-script-borrowed.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:9:5
  |
9 | use super::witness_version::WitnessVersion;
  |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:10:5
   |
10 | use super::{
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `opcodes`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:17:12
   |
17 | use crate::opcodes::all::*;
   |            ^^^^^^^ use of unresolved module or unlinked crate `opcodes`
   |
help: you might be missing a crate named `opcodes`, add it to your project and import it in your code
   |
 3 + extern crate opcodes;
   |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:3:5
  |
3 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:6:5
  |
6 | use internals::array::ArrayExt; // For `split_first`.
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `hex`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:5:5
  |
5 | use hex::DisplayHex as _;
  |     ^^^ use of unresolved module or unlinked crate `hex`
  |
help: you might be missing a crate named `hex`, add it to your project and import it in your code
  |
3 + extern crate hex;
  |

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:7:5
  |
7 | use internals::ToU64 as _;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:15:24
   |
15 | use crate::consensus::{self, Encodable};
   |                        ^^^^ no `consensus` in the root

error[E0432]: unresolved import `crate::key`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:16:12
   |
16 | use crate::key::{PublicKey, UntweakedPublicKey, WPubkeyHash};
   |            ^^^ use of unresolved module or unlinked crate `key`
   |
help: you might be missing a crate named `key`, add it to your project and import it in your code
   |
 3 + extern crate key;
   |

error[E0432]: unresolved import `crate::opcodes`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:18:22
   |
18 | use crate::opcodes::{self, Opcode};
   |            -------   ^^^^ no `opcodes` in the root
   |            |
   |            help: a similar name exists in the module: `Opcode`

error[E0432]: unresolved import `crate::policy`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:19:12
   |
19 | use crate::policy::{DUST_RELAY_TX_FEE, MAX_OP_RETURN_RELAY};
   |            ^^^^^^ use of unresolved module or unlinked crate `policy`
   |
help: you might be missing a crate named `policy`, add it to your project and import it in your code
   |
 3 + extern crate policy;
   |

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:20:12
   |
20 | use crate::prelude::{sink, String, ToString};
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:21:21
   |
21 | use crate::script::{self, ScriptPubKeyBufExt as _};
   |                     ^^^^ no `script` in the root

error[E0432]: unresolved import `crate::taproot`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:22:12
   |
22 | use crate::taproot::{LeafVersion, TapLeafHash, TapNodeHash};
   |            ^^^^^^^ use of unresolved module or unlinked crate `taproot`
   |
help: you might be missing a crate named `taproot`, add it to your project and import it in your code
   |
 3 + extern crate taproot;
   |

error[E0432]: unresolved import `crate::witness_program`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:23:12
   |
23 | use crate::witness_program::P2A_PROGRAM;
   |            ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `witness_program`
   |
help: you might be missing a crate named `witness_program`, add it to your project and import it in your code
   |
 3 + extern crate witness_program;
   |

error[E0432]: unresolved imports `crate::internal_macros`, `crate::Amount`, `crate::FeeRate`, `crate::ScriptPubKeyBuf`, `crate::WitnessScriptBuf`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/borrowed.rs:24:13
   |
24 | ...::{internal_macros, Amount, FeeRate, ScriptPubKeyBuf, WitnessScriptBuf};
   |       ^^^^^^^^^^^^^^^  ^^^^^^  ^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^ no `WitnessScriptBuf` in the root
   |       |                |       |        |
   |       |                |       |        no `ScriptPubKeyBuf` in the root
   |       |                |       no `FeeRate` in the root
   |       |                no `Amount` in the root
   |       no `internal_macros` in the root

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
